--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta property="og:title" content="voxel-cat">
   <meta property="og:description" content="voxel-cat is an entry for the JS1k 2019 &quot;X&quot; JavaScript code golfing competition, where the goal is to create a fancy demo up to 1024 bytes.">
   <meta property="og:type" content="product">
-  <meta property="og:url" content="http://gaborbata.github.io/voxel-cat/">
-  <meta property="og:image" content="http://gaborbata.github.io/voxel-cat/voxel-cat.png">
+  <meta property="og:url" content="https://gaborbata.github.io/voxel-cat/">
+  <meta property="og:image" content="https://gaborbata.github.io/voxel-cat/voxel-cat.png">
   <title>voxel-cat</title>
 
   <style type="text/css">
